k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: hr-dashboard-ingress
  namespace: hr-dashboard

spec:
  ingressClassName: nginx    # match whatever kubectl get ingressclass shows

  rules:
  - host: hr.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hr-dashboard-service
            port:
              number: 80
