k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: hr-dashboard-network
  namespace: hr-dashboard

spec:
  podSelector:
    matchLabels:
      app: hr-dashboard

  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - protocol: TCP
      port: 8501
